--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
     "builds": [{"src":"backend/server.js", "use": "@vercel/node"}],
-    "routes": [{"server": "backend/server.js", "dest": "/"}],
+    "routes": [{"server": "backend/server.js", "dest": "/"}]
 }
