--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "engines":{
+    "node": "20.x"
+  },
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
-  "author": "vishal",
+  "author": "vansh",
   "license": "ISC"
 }
